# rcmalli.github.io

./: .gitignore  404.html  Dockerfile  README.md  _config.yml  index.html  l.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
_data/: navigation.yml
_includes/footer/: custom.html
_includes/head/: custom.html
_layouts/: home.html
_mypages/: about.md  l.html
_posts/: 2020-02-11-test-post.md
_sass/minimal-mistakes/: _reset.scss  _sidebar.scss  _variables.scss
blog/: index.html
docker/: docker-compose.default.yml
docs/: blog.md  index-test.md  index.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
dummy/overrides/partials/: header.html
index-test/: index.html
overrides/: main.html
overrides/partials/: footer.html  header.html  nav.html
search/: search_index.json
site/: 404.html  index.html
site/search/: search_index.json
site/stylesheets/: extra.css
