[tool.poetry]
name = "rcmalli-website"
version = "0.0.1"
description = "Personal Website"
authors = [
    "Refik Can MALLI",
]
readme = "README.md"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.7.1, <4.0"
pytest = "^5 | ^6 | ^7"
mkdocstrings = "*"
mkdocs-material = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

